test/scc/expr/semantic-errors/165.a
165.t:4:23: error: too many initializer values